added commands leaderboard, pop4959, points, private, say, stats. added util methods