@@ -1,33 +1,26 @@
 package com.github.pop4959.srbot.commands;
 
-import com.github.pop4959.srbot.data.Config;
+import com.github.pop4959.srbot.models.Config;
 import com.github.pop4959.srbot.utils.Utils;
 import com.ibasco.agql.protocols.valve.steam.webapi.SteamWebApiClient;
-import com.ibasco.agql.protocols.valve.steam.webapi.enums.VanityUrlType;
-import com.ibasco.agql.protocols.valve.steam.webapi.interfaces.SteamUser;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.interactions.commands.OptionMapping;
 import net.dv8tion.jda.api.interactions.commands.OptionType;
 import net.dv8tion.jda.api.interactions.commands.build.Commands;
 import net.dv8tion.jda.api.interactions.commands.build.SlashCommandData;
-import org.apache.commons.lang3.StringUtils;
+import net.dv8tion.jda.api.utils.FileUpload;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
-import java.util.regex.Pattern;
+import java.io.*;
+
+import static com.github.pop4959.srbot.constants.CommandFieldNames.SEASON_FIELD;
+import static com.github.pop4959.srbot.constants.CommandFieldNames.STEAM_ID_FIELD;
 
 public class Chart extends Command {
     private final Config config;
     private final SteamWebApiClient steamWebApiClient;
-    private final String steamIdField = "steamid";
-    private final String seasonField = "season";
 
     public Chart(Config config, SteamWebApiClient steamWebApiClient) {
-        super("chart", "Create a chart");
+        super("chart", "View ranking points chart");
         this.config = config;
         this.steamWebApiClient = steamWebApiClient;
     }
@@ -36,39 +29,45 @@ public class Chart extends Command {
     public SlashCommandData getSlashCommand() {
         return Commands
             .slash(name, description)
-            .addOption(OptionType.STRING, steamIdField, "Steam ID or vanity URL", true)
-            .addOption(OptionType.INTEGER, seasonField, "Ranking season (1-4)", true);
+            .addOption(OptionType.STRING, STEAM_ID_FIELD, "Steam ID or vanity URL", true)
+            .addOption(OptionType.INTEGER, SEASON_FIELD, "Ranking season 1 - off season, 2 - beta season, 3 - christmas season, 4 - winter season", true);
     }
 
     @Override
     public void execute(SlashCommandInteractionEvent event) throws Exception {
         event.deferReply(true).queue();
 
-        var possibleSteamId = event.getOption(steamIdField, OptionMapping::getAsString);
+        var possibleSteamId = event.getOption(STEAM_ID_FIELD, OptionMapping::getAsString);
         var steamId = Utils.resolveSteamId(possibleSteamId, steamWebApiClient, config.queryTimeout);
 
-        var season = event.getOption(seasonField, OptionMapping::getAsInt);
+        var season = event.getOption(SEASON_FIELD, OptionMapping::getAsInt);
         if (season < 1 || season > 4) {
-            event.reply(config.language.wrongSeason).queue();
+            event.getHook().sendMessage(config.messages.wrongSeason).queue();
             return;
         }
 
         String output;
         try {
-            var chart = Runtime.getRuntime().exec(String.format("node scripts/chart.js %s %s", steamId, season));
-            var out = new BufferedReader(new InputStreamReader(chart.getInputStream()));
+            var chartProcessBuilder = new ProcessBuilder("node", "chart.js", steamId, season.toString());
+            chartProcessBuilder.directory(new File("./scripts"));
+            var chartProcess = chartProcessBuilder.start();
+
+            var out = new BufferedReader(new InputStreamReader(chartProcess.getInputStream()));
             output = out.readLine();
             if (output == null) {
-                var err = new BufferedReader(new InputStreamReader(chart.getErrorStream()));
-                err.lines().forEach(l -> logger.log(l, "ct"));
-                output = config.language.unknownError;
+                var err = new BufferedReader(new InputStreamReader(chartProcess.getErrorStream()));
+                err.lines().forEach(System.out::println);
+                output = config.messages.unknownError;
             }
+            System.out.println(output);
         } catch (IOException e) {
-            logger.log(e.getMessage(), "ct");
-            event.reply(config.language.errPy).queue();
+            e.printStackTrace();
+//            logger.log(e.getMessage(), "ct");
+            event.getHook().sendMessage(config.messages.errPy).queue();
             return;
         }
 
-        event.reply(output).queue();
+        var outputFile = new File("scripts/%s".formatted(output));
+        event.getHook().sendFiles(FileUpload.fromData(outputFile)).queue();
     }
 }
